--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -144,6 +144,15 @@
     border-radius: 10px;
 }
 
+/* home */
+
+.card-img-top {
+    max-height: 200px;
+    object-fit: cover;
+}
+
+/* home end */
+
 /* FAQ Container */
 .contentFAQ {
     width: 70%;
