--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -146,6 +146,16 @@
     height: 100%;
 }
 
+.video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
 .hero-video {
     width: 100%;
     height: 100%;
@@ -176,7 +186,6 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-/* Card Animations */
 .card {
     transition: transform 0.3s ease;
 }
@@ -283,14 +292,15 @@
 
 #startBtn {
     display: none;
-    margin: 10px 43%;
+    margin: 10px auto; /* Mengubah margin horizontal menjadi auto untuk memusatkan */
     padding: 10px;
     background-color: #48cae4;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 10%;
+    width: 150px; /* Menggunakan lebar tetap dalam piksel */
+    max-width: 80%; /* Membatasi lebar maksimum */
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
@@ -372,3 +382,22 @@
 }
 
 /* footer end */
+
+@media screen and (max-width: 768px) {
+    #startBtn {
+        width: 70%; 
+        margin: 10px auto;
+    }
+
+    .contentFAQ {
+        width: 90%; 
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #startBtn {
+        width: 80%; 
+        padding: 8px;
+        font-size: 14px; 
+    }
+}
